--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.3",
-    "mysql": "^2.14.1"
+    "fs": "0.0.1-security",
+    "multer": "^1.3.0",
+    "mysql": "^2.14.1",
+    "togeojson": "^0.16.0",
+    "xmldom": "^0.1.27"
   }
 }
