--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "0.0.1-security",
     "multer": "^1.3.0",
     "mysql": "^2.14.1",
+    "point-in-polygon": "^1.0.1",
     "togeojson": "^0.16.0",
     "xmldom": "^0.1.27"
   }
