--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.14.1",
     "point-in-polygon": "^1.0.1",
+    "socket.io": "^2.0.3",
     "togeojson": "^0.16.0",
     "xmldom": "^0.1.27"
   },
