--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.4",
     "express": "^4.15.3",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.1.0",
+    "moment": "^2.19.1",
     "multer": "^1.3.0",
     "mysql": "^2.14.1",
     "point-in-polygon": "^1.0.1",
