--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.15.3",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.1.0",
