--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/patriciohc/app-base-ws#readme",
   "dependencies": {
+    "aws-sdk": "^2.188.0",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
