--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.3",
+    "fbgraph": "^1.4.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.1.0",
     "moment": "^2.19.1",
