--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.15.3",
     "fbgraph": "^1.4.1",
     "fs": "0.0.1-security",
+    "google-auth-library": "^1.3.1",
     "jsonwebtoken": "^8.1.0",
     "moment": "^2.19.1",
     "multer": "^1.3.0",
