--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.19.1",
     "multer": "^1.3.0",
     "mysql": "^2.14.1",
+    "paypal-rest-sdk": "^1.8.1",
     "point-in-polygon": "^1.0.1",
     "socket.io": "^2.0.3",
     "xmldom": "^0.1.27"
