--- a/package.json
+++ b/package.json
@@ -29,12 +29,10 @@
     "google-auth-library": "^1.3.1",
     "jsonwebtoken": "^8.1.0",
     "moment": "^2.19.1",
-    "multer": "^1.3.0",
     "mysql": "^2.14.1",
     "paypal-rest-sdk": "^1.8.1",
     "point-in-polygon": "^1.0.1",
-    "socket.io": "^2.0.3",
-    "xmldom": "^0.1.27"
+    "socket.io": "^2.0.3"
   },
   "engines": {
     "node": "8.9.4",
