--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "moment": "^2.19.1",
     "mysql": "^2.14.1",
     "paypal-rest-sdk": "^1.8.1",
+    "pg": "^7.4.1",
+    "pg-format": "^1.0.4",
     "point-in-polygon": "^1.0.1",
     "socket.io": "^2.0.3"
   },
