--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   "dependencies": {
     "aws-sdk": "^2.188.0",
     "body-parser": "^1.17.2",
+    "config": "^2.0.1",
     "cors": "^2.8.4",
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.3",
     "fbgraph": "^1.4.1",
-    "fs": "0.0.1-security",
     "google-auth-library": "^1.3.1",
     "jsonwebtoken": "^8.1.0",
     "moment": "^2.19.1",
     "mysql": "^2.14.1",
+    "nodemailer": "^4.6.8",
     "paypal-rest-sdk": "^1.8.1",
     "pg": "^7.4.1",
     "pg-format": "^1.0.4",
